[package]
name = "jakeland"
version = "0.1.0"
authors = ["Jake Stambaugh <jake.stambaugh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = { version = "1.4.0" }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"
default-features = false
features = ["handlebars_templates", "serve"]
